--- a/laudo.html
+++ b/laudo.html
@@ -43,7 +43,7 @@
   .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
   .btn-clear{ margin-top:10px;background:#eee; }
 
-  /* ===== FOLHA ===== */
+  /* ===== FOLHA (TELA) ===== */
   .folha{
     width: 210mm;
     min-height: 297mm;
@@ -53,11 +53,7 @@
     box-sizing:border-box;
     padding:14mm 18mm;
     position:relative;
-    overflow:hidden;
   }
-
-  /* Timbre só no print */
-  .timbre-print{ display:none; }
 
   /* ===== TELA (FORMULÁRIO) ===== */
   .titulo-laudo{
@@ -164,27 +160,48 @@
 
   /* ===== PRINT ===== */
   .print-only{ display:none; }
-  .print-only{
-    position:relative;
-    z-index:2;
-    padding:0;
+
+  /* ✅ AQUI está a mudança MAIS IMPORTANTE:
+     - fundo timbrado FIXO no print (não se move)
+     - conteúdo com margens padrão (não muda) */
+  @media print{
+    body{ background:#fff; padding:0; margin:0; }
+    .controles{ display:none !important; }
+    .no-print{ display:none !important; }
+    .print-only{ display:block !important; }
+
+    /* ✅ fundo timbrado fixo (ultra estável) */
+    .print-bg{
+      position:fixed;
+      inset:0;
+      width:100%;
+      height:100%;
+      z-index:0;
+      pointer-events:none;
+    }
+    .print-bg img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+    }
+
+    /* ✅ conteúdo sempre por cima */
+    .print-page{
+      position:relative;
+      z-index:2;
+      margin: 0;
+      padding: 28mm 18mm 20mm 18mm; /* ✅ padrão laudo profissional */
+      box-sizing:border-box;
+      font-family:"Arial Narrow", Arial, sans-serif;
+    }
+
+    /* Remove sombras/tamanhos fixos */
+    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; }
+
+    @page{ size:A4; margin:0; }
   }
 
-  /* ✅ Aparência profissional / menos “condensado” */
-  .print-only *{
-    font-family:"Arial Narrow", Arial, sans-serif;
-    -webkit-print-color-adjust:exact;
-    print-color-adjust:exact;
-  }
-
-  .print-body{
-    /* ✅ desce pra não bater no logo SESC (seu timbre tem logo grande no topo) */
-    margin-top:32mm;
-    padding: 0 18mm;
-    box-sizing:border-box;
-  }
-
-  /* Cabeçalho paciente */
+  /* ===== PRINT LAYOUT (PROFISSIONAL) ===== */
   .cab-paciente{
     border-top: 3px solid #00a651;
     border-bottom: 3px solid #00a651;
@@ -199,12 +216,14 @@
     font-size:12pt;
     font-weight:700;
     text-transform:uppercase;
+    font-family:"Arial Narrow", Arial, sans-serif;
   }
 
   .cab-nome, .cab-exame{
     font-size:11.8pt;
     font-weight:700;
     text-transform:uppercase;
+    font-family:"Arial Narrow", Arial, sans-serif;
     line-height:1.15;
   }
 
@@ -213,12 +232,14 @@
     display:grid;
     grid-template-columns: 1.2fr 0.8fr;
     gap: 6px 40px;
+    font-family:"Arial Narrow", Arial, sans-serif;
     font-size:10pt;
     text-transform:uppercase;
     font-weight:400;
   }
 
   .linha-identificacao{
+    font-family:"Arial Narrow", Arial, sans-serif;
     font-size:10.5pt;
     text-transform:uppercase;
     margin-bottom:4px;
@@ -231,56 +252,20 @@
   .secao-print{
     margin-bottom:12px;
     line-height:1.55;
+    font-family:"Arial Narrow", Arial, sans-serif;
     font-size:10.5pt;
     text-align:justify;
   }
-
   .tit-negrito{ font-weight:800; text-transform:uppercase; }
   .tit-normal-caps{ font-weight:400; text-transform:uppercase; }
-
-  .concl-resposta-bloco{
-    white-space:pre-line;
-    font-weight:400;
-    display:block;
-    margin-top:2px;
-  }
-
+  .concl-resposta-bloco{ white-space:pre-line; font-weight:400; display:block; margin-top:2px; }
   #obs_print_wrap{ display:none; }
 
   .rodape-prof{
     margin-top:18px;
     text-align:center;
+    font-family:"Arial Narrow", Arial, sans-serif;
     font-size:10.5pt;
-  }
-
-  @media print{
-    body{ background:#fff; padding:0; }
-    .controles{ display:none !important; }
-
-    .folha{
-      box-shadow:none;
-      width:210mm;
-      height:297mm;
-      margin:0;
-      padding:0;
-      min-height:auto !important;
-    }
-
-    .no-print{ display:none !important; }
-    .print-only{ display:block !important; }
-
-    .timbre-print{
-      display:block !important;
-      position:absolute;
-      inset:0;
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      pointer-events:none;
-      z-index:0;
-    }
-
-    @page{ size:A4; margin:0; }
   }
 </style>
 </head>
@@ -289,11 +274,8 @@
 
 <div class="folha">
 
-  <!-- ✅ Timbre SOMENTE impressão -->
-  <img class="timbre-print" src="img/SESC_1.png" alt="Timbre">
-
   <!-- =========================
-       ✅ TELA
+       ✅ TELA: FORMULÁRIO
        ========================= -->
   <div class="no-print">
     <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
@@ -401,28 +383,24 @@
           <label><input type="radio" name="c" data-tit="ATIPIAS EM CÉLULAS GLANDULARES" data-full="Adenocarcinoma invasor, SOE" value="Adenocarcinoma SOE" onchange="atualizar()"> Adenocarcinoma invasor, SOE</label>
         </div>
       </div>
-    </div><!-- painel -->
+    </div>
 
+    <!-- Observação -->
     <div class="obs-wrap">
       <div class="obs-title">Observação:</div>
-      <div class="op-col" style="margin-bottom:10px;">
-        <label><input type="radio" name="obs_opt" value="Tratar e repetir." onchange="aplicarObs(this.value)"> Tratar e repetir.</label>
-        <label><input type="radio" name="obs_opt" value="Alterações celulares importantes. Tratar e repetir." onchange="aplicarObs(this.value)"> Alterações celulares importantes. Tratar e repetir.</label>
-        <label><input type="radio" name="obs_opt" value="Correlacionar com exames complementares." onchange="aplicarObs(this.value)"> Correlacionar com exames complementares.</label>
-        <label><input type="radio" name="obs_opt" value="Padrão epitelial hipoestrogênico." onchange="aplicarObs(this.value)"> Padrão epitelial hipoestrogênico.</label>
-        <label><input type="radio" name="obs_opt" value="Padrão epitelial ainda trófico." onchange="aplicarObs(this.value)"> Padrão epitelial ainda trófico.</label>
-      </div>
-
       <textarea id="obs_texto" placeholder="Caso necessário, digite a observação aqui..." oninput="setObsPrint(this.value)"></textarea>
     </div>
   </div>
 
   <!-- =========================
-       ✅ PRINT: LAUDO FINAL
+       ✅ PRINT
        ========================= -->
   <div class="print-only">
-    <div class="print-body">
+    <div class="print-bg">
+      <img src="img/SESC_1.png" alt="Timbre">
+    </div>
 
+    <div class="print-page">
       <div class="cab-paciente">
         <div class="cab-row1">
           <div class="cab-left">
@@ -451,16 +429,8 @@
 
       <div class="linha-identificacao"><strong>CONVÊNIO:</strong>&nbsp;UNIDADE MÓVEL SESC SAÚDE MULHER</div>
       <div class="linha-identificacao"><strong>EXAME REALIZADO:</strong>&nbsp;CITOPATOLÓGICO CÉRVICO-VAGINAL/MICROFLORA</div>
-
-      <div class="linha-identificacao">
-        <strong>DATA DA COLETA:</strong>
-        <span id="data_coleta_print"></span>
-      </div>
-
-      <div class="linha-identificacao">
-        <strong>RESPONSÁVEL:</strong>
-        <span id="nome_resp_print"></span>
-      </div>
+      <div class="linha-identificacao"><strong>DATA DA COLETA:</strong>&nbsp;<span id="data_coleta_print"></span></div>
+      <div class="linha-identificacao"><strong>RESPONSÁVEL:</strong>&nbsp;<span id="nome_resp_print"></span></div>
 
       <div class="titulo-laudo">LAUDO DO EXAME CITOPATOLÓGICO DO COLO DO ÚTERO</div>
 
@@ -503,7 +473,7 @@
     </div>
   </div>
 
-</div><!-- folha -->
+</div>
 
 <div class="controles no-print">
   <button class="btn btn-print" onclick="imprimirLaudo()">IMPRIMIR / SALVAR PDF</button>
@@ -533,12 +503,6 @@
       wrap.style.display = "none";
       el.textContent = "";
     }
-  }
-
-  function aplicarObs(txt){
-    const el = document.getElementById("obs_texto");
-    el.value = txt;
-    setObsPrint(txt);
   }
 
   const params = new URLSearchParams(window.location.search);
@@ -585,11 +549,6 @@
 
   function atualizar(){
     const checksEpi = document.querySelectorAll('.epi:checked');
-    const zonaSim = document.getElementById('zona_sim');
-    const zonaNao = document.getElementById('zona_nao');
-
-    if (checksEpi.length > 1) zonaSim.checked = true;
-    else if (checksEpi.length === 1) zonaNao.checked = true;
 
     document.getElementById('p_adeq').textContent =
       document.querySelector('input[name="adeq"]:checked')?.value || '';
@@ -645,7 +604,7 @@
     preencherCabecalhoPrint();
   }
 
-  // ===== Exportação no padrão do sistema =====
+  /* ===== Exportação no padrão do sistema ===== */
   function mesChaveAtual(){
     const now = new Date();
     const yyyy = now.getFullYear();
@@ -708,7 +667,6 @@
     const tituloOriginal = document.title;
     document.title = nomeFinal;
 
-    // exporta só se alterado
     try{
       const concl = document.querySelector('input[name="c"]:checked');
       if(concl && concl.value !== "NEGATIVO"){
@@ -725,12 +683,10 @@
     }catch(e){ console.error(e); }
 
     forceReflow();
-
     setTimeout(() => {
       atualizar();
       forceReflow();
       window.print();
-
       setTimeout(() => { document.title = tituloOriginal; }, 1200);
       setTimeout(() => voltarSistema(), 700);
     }, 180);
@@ -738,16 +694,15 @@
 
   function buildWordHTML(){
     atualizar();
-    const bloco = document.querySelector(".print-only");
+    const bloco = document.querySelector(".print-only .print-page");
     const clone = bloco.cloneNode(true);
     clone.style.display = "block";
-    return clone.innerHTML;
+    return clone.outerHTML;
   }
 
   function baixarWordEVoltar(){
     atualizar();
 
-    // exporta só se alterado
     try{
       const concl = document.querySelector('input[name="c"]:checked');
       if(concl && concl.value !== "NEGATIVO"){
