--- a/laudo.html
+++ b/laudo.html
@@ -257,7 +257,7 @@
   .secao-print{
     margin-bottom:12px;
     line-height:1.55;
-    font-family:"Arial Narrow", Arial, sans-serif;
+    font-family:"Arial Narrow";
     font-size:11.5pt;
     text-align:justify;
   }
@@ -747,4 +747,5 @@
 
 </body>
 </html>
+
 
