--- a/laudo.html
+++ b/laudo.html
@@ -257,7 +257,7 @@
   .secao-print{
     margin-bottom:12px;
     line-height:1.55;
-    font-family:"Arial Narrow";
+    font-family:"Arial Narrow", sans-serif;
     font-size:11.5pt;
     text-align:justify;
   }
@@ -747,5 +747,6 @@
 
 </body>
 </html>
+
 
 
