--- a/laudo.html
+++ b/laudo.html
@@ -235,7 +235,7 @@
     display:grid;
     grid-template-columns: 1.2fr 0.8fr;
     gap: 6px 40px;
-    font-family:"Arial Narrow", Arial, sans-serif;
+    font-family:"Helvetica, Arial Narrow";
     font-size:10pt;
     text-transform:uppercase;
     font-weight:400;
@@ -747,6 +747,7 @@
 
 </body>
 </html>
+
 
 
 
