--- a/laudo.html
+++ b/laudo.html
@@ -266,7 +266,8 @@
   .tit-normal-caps{ font-weight:400; text-transform:uppercase; }
   .concl-resposta-bloco{ white-space:pre-line; font-weight:400; display:block; margin-top:2px; }
 
-  #obs_print_wrap{ display:none; }
+  #obs_print_wrap{ display:block; }
+  #obs_print_wrap.vazio{ display:none; }
 
   .rodape-prof{
     margin-top:18px;
@@ -748,6 +749,7 @@
 
 </body>
 </html>
+
 
 
 
