--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Sistema-Laudo (Principal)</title>
+<title>SI - SISTEMA DE INFORMAÇÃO</title>
 
 <!-- ✅ PWA -->
 <link rel="manifest" href="manifest.json">
@@ -11,141 +11,529 @@
 <link rel="apple-touch-icon" href="icons/icon-192.png">
 
 <style>
-  body{font-family:Arial,sans-serif;margin:0;padding:24px;background:#f4f4f4;}
-  .card{max-width:980px;margin:auto;background:#fff;padding:22px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.12);}
-  h1{margin:0 0 14px;text-align:center;color:#003366;}
-
-  label{font-weight:900;display:block;margin-top:14px;}
-  input, textarea, select{
-    width:100%; box-sizing:border-box;
-    padding:10px; font-size:14px;
-    border:1px solid #cfd6dd; border-radius:8px;
+  :root{
+    --bg1:#baf2c7;               /* verde claro */
+    --bg2:#0a2a47;               /* azul escuro */
+    --panel:rgba(255,255,255,.10);
+    --panel2:rgba(255,255,255,.06);
+    --border:rgba(255,255,255,.22);
+    --text:#f5fbff;
+    --muted:rgba(255,255,255,.78);
+    --accent:#17e3a6;
+    --shadow: 0 18px 40px rgba(0,0,0,.30);
+    --radius:16px;
   }
 
-  textarea{resize:vertical;white-space:pre-wrap;}
-  .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;}
-  .btn{
-    margin-top:16px; width:100%;
-    padding:14px; border:none; border-radius:10px;
-    background:#0078d7; color:#fff; font-weight:900; font-size:16px;
-    cursor:pointer;
-  }
-  .btn:hover{background:#005fa3;}
-  .btn-green{background:#00a651;}
-  .btn-green:hover{background:#008f45;}
+  *{box-sizing:border-box}
+  html,body{height:100%}
 
-  .muted{color:#444;font-size:13px;margin-top:8px;line-height:1.4;}
-  .box{
-    margin-top:14px;
-    background:#f7fbff;
-    border:1px dashed #8bb3db;
-    padding:12px;
-    border-radius:10px;
+  body{
+    margin:0;
+    font-family:"Segoe UI", Roboto, Arial, sans-serif;
+    color:var(--text);
+    overflow:hidden;       /* ✅ ZERO SCROLL */
+    height:100vh;
+    background: linear-gradient(90deg, var(--bg1) 0%, var(--bg2) 55%, #061a2e 100%);
+    position:relative;
   }
-  .subttl{
-    font-weight:900;
-    color:#003366;
-    margin-bottom:8px;
+
+  /* ✅ marca d’água */
+  body::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    background-image:url("logo/logotipo.png");
+    background-repeat:no-repeat;
+    background-position:right center;
+    background-size:clamp(360px, 50vw, 900px);
+    opacity:.12;
+    pointer-events:none;
+    filter:saturate(.95) contrast(1.05);
+    transform:translateX(4%);
+  }
+
+  .app{
+    height:100vh;
+    display:flex;
+    flex-direction:column;
+    position:relative;
+    z-index:1;
+  }
+
+  /* ✅ Header */
+  header{
+    height:78px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:14px 22px;
+    border-bottom: 1px solid rgba(255,255,255,.12);
+    background: linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.00));
+    backdrop-filter: blur(10px);
+  }
+
+  .brand{
+    display:flex;
+    align-items:center;
+    gap:14px;
+    min-width:340px;
+  }
+
+  .brand img{
+    width:165px;
+    height:auto;
+    object-fit:contain;
+    filter: drop-shadow(0 8px 14px rgba(0,0,0,.35));
+  }
+
+  .brand-title{
+    display:flex;
+    flex-direction:column;
+    line-height:1.1;
+  }
+
+  .brand-title strong{
+    font-size:14px;
+    letter-spacing:.18em;
     text-transform:uppercase;
-    font-size:13px;
+    color: rgba(255,255,255,.90);
   }
-  .hint{font-size:12px;color:#444;margin-top:6px;line-height:1.4;}
+
+  .brand-title span{
+    font-size:12px;
+    color: rgba(255,255,255,.68);
+    margin-top:3px;
+  }
+
+  .header-right{
+    display:flex;
+    align-items:center;
+    gap:10px;
+  }
+
+  .badge{
+    padding:8px 10px;
+    border:1px solid rgba(255,255,255,.18);
+    border-radius:999px;
+    background: rgba(0,0,0,.18);
+    color:rgba(255,255,255,.86);
+    font-size:12px;
+    letter-spacing:.04em;
+    backdrop-filter: blur(8px);
+    user-select:none;
+  }
+
+  main{
+    flex:1;
+    display:grid;
+    grid-template-columns: 1.25fr .75fr;
+    gap:18px;
+    padding:18px 22px 22px;
+    height:calc(100vh - 78px);
+    min-height:0;
+  }
+
+  /* Painéis */
+  .panel{
+    background: linear-gradient(180deg, var(--panel), var(--panel2));
+    border:1px solid var(--border);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    overflow:hidden;
+    display:flex;
+    flex-direction:column;
+    min-height:0;
+  }
+
+  .panel-head{
+    padding:14px 16px;
+    border-bottom:1px solid rgba(255,255,255,.12);
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+  }
+
+  .panel-head h1{
+    margin:0;
+    font-size:15px;
+    letter-spacing:.14em;
+    text-transform:uppercase;
+    font-weight:800;
+    color:rgba(255,255,255,.92);
+  }
+
+  .panel-body{
+    padding:16px;
+    display:flex;
+    flex-direction:column;
+    gap:14px;
+    min-height:0;
+  }
+
+  /* ✅ Digitação rápida (label fixo + guia sempre visível) */
+  .fast-input{
+    border-radius: 14px;
+    border: 1px solid rgba(255,255,255,.22);
+    background: rgba(0,0,0,.20);
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.18);
+    padding: 14px;
+  }
+
+  .fast-input .label{
+    display:flex;
+    align-items:center;
+    gap:10px;
+    font-size:12px;
+    letter-spacing:.09em;
+    text-transform:uppercase;
+    color: rgba(255,255,255,.82);
+    margin-bottom:10px;
+    user-select:none;
+  }
+
+  .label .dot{
+    width:10px;
+    height:10px;
+    border-radius:50%;
+    background: var(--accent);
+    box-shadow: 0 0 0 4px rgba(23,227,166,.14);
+  }
+
+  .guide{
+    font-size:12px;
+    color: rgba(255,255,255,.80);
+    margin: 0 0 10px 0;
+    padding: 10px 12px;
+    border-radius: 12px;
+    border:1px dashed rgba(255,255,255,.20);
+    background: rgba(255,255,255,.05);
+    display:flex;
+    flex-wrap:wrap;
+    align-items:center;
+    gap:8px;
+    user-select:none;
+  }
+
+  .guide code{
+    font-family: "Consolas", "Courier New", monospace;
+    font-size:12px;
+    padding:2px 8px;
+    border-radius:8px;
+    background: rgba(0,0,0,.22);
+    border:1px solid rgba(255,255,255,.12);
+  }
+
+  textarea{
+    width:100%;
+    height:210px;
+    resize:none;
+    border:1px solid rgba(255,255,255,.18);
+    border-radius: 14px;
+    padding: 14px;
+    outline:none;
+    background: rgba(10, 18, 26, .60);
+    color: rgba(255,255,255,.95);
+    font-size: 15px;
+    line-height: 1.5;
+    white-space: pre-wrap;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.25);
+  }
+
+  textarea:focus{
+    border-color: rgba(23,227,166,.70);
+    box-shadow: 0 0 0 3px rgba(23,227,166,.16), inset 0 0 0 1px rgba(0,0,0,.25);
+  }
+
+  .hint{
+    font-size:12px;
+    color: rgba(255,255,255,.78);
+    line-height:1.5;
+    margin-top:10px;
+    user-select:none;
+  }
+
+  /* Botões */
+  .actions{
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+  }
+
+  .btn{
+    border:none;
+    cursor:pointer;
+    padding: 12px 14px;
+    border-radius: 14px;
+    font-weight:900;
+    letter-spacing:.04em;
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    gap:8px;
+    transition: transform .06s ease, opacity .2s ease, filter .2s ease;
+    user-select:none;
+    width:100%;
+  }
+
+  .btn:active{ transform: scale(.99) }
+
+  .btn-green{
+    background: linear-gradient(135deg, rgba(23,227,166,.95), rgba(33,150,243,.82));
+    color:#06242a;
+    box-shadow: 0 18px 34px rgba(0,0,0,.26);
+  }
+
+  /* ✅ área técnica oculta (campos destino invisíveis) */
+  .tech-hidden{
+    display:none !important;
+    visibility:hidden !important;
+    height:0 !important;
+    overflow:hidden !important;
+  }
+
+  /* Painel lateral */
+  .side{
+    display:flex;
+    flex-direction:column;
+    gap:18px;
+    min-height:0;
+  }
+
+  .card{
+    background: linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.06));
+    border:1px solid rgba(255,255,255,.18);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    overflow:hidden;
+    min-height:0;
+  }
+
+  .card-head{
+    padding:12px 14px;
+    border-bottom:1px solid rgba(255,255,255,.12);
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+  }
+
+  .card-head h2{
+    margin:0;
+    font-size:13px;
+    letter-spacing:.10em;
+    text-transform:uppercase;
+    color:rgba(255,255,255,.88);
+  }
+
+  .card-body{
+    padding:14px;
+    color: rgba(255,255,255,.82);
+    font-size:13px;
+    line-height:1.6;
+  }
+
+  .kpi{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap:12px;
+    margin-top:12px;
+  }
+
+  .kpi-box{
+    border-radius:14px;
+    border:1px solid rgba(255,255,255,.16);
+    background: rgba(0,0,0,.16);
+    padding:12px;
+  }
+
+  .kpi-box b{
+    display:block;
+    font-size:11px;
+    letter-spacing:.14em;
+    text-transform:uppercase;
+    color: rgba(255,255,255,.72);
+    margin-bottom:6px;
+  }
+
+  .kpi-box span{
+    font-size:18px;
+    font-weight:900;
+    color: rgba(255,255,255,.92);
+  }
+
+  @media (max-width: 980px){
+    main{ grid-template-columns: 1fr; }
+    textarea{ height:190px; }
+    .brand{min-width:auto}
+  }
 </style>
 </head>
 
 <body>
-<div class="card">
-  <h1>Sistema de Laudos</h1>
+<div class="app">
 
-  <div class="box">
-    <div class="subttl">DIGITAÇÃO RÁPIDA (COLE OU DIGITE NESSA ORDEM)</div>
-
-    <textarea id="entrada_rapida" rows="11" placeholder="MODELO:
-MARIA APARECIDA DA SILVA 000156/2026
-01/12/2025
-18/01/1976
-50037048449
-83985567895
-RUA: LINDOLFO GONÇALVES CHAVES, 900
-BAIRRO: JARDIM SÃO PAULO
-CIDADE: JOÃO PESSOA/PB
-CEP: 58051-200
-SNM"></textarea>
-
-    <button class="btn btn-green" style="margin-top:10px;" onclick="extrairEAbrir()">
-      EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO
-    </button>
-
-    <div class="hint">
-      ✅ Última linha pode ser: <b>SNM</b> ou <b>EAM</b> (Responsável).<br>
-      ✅ O nome não quebra: o exame é detectado por padrão <b>000156/2026</b>.
-    </div>
-  </div>
-
-  <div class="grid">
-    <div>
-      <label>Paciente</label>
-      <input id="paciente" type="text" placeholder="NOME COMPLETO"/>
-    </div>
-    <div>
-      <label>Nº Exame</label>
-      <input id="exame" type="text" placeholder="000156/2026"/>
+  <!-- ✅ Título + Logo topo esquerdo -->
+  <header>
+    <div class="brand">
+      <img src="logo/sesctopo.png" alt="SESC" />
+      <div class="brand-title">
+        <strong>SI - SISTEMA DE INFORMAÇÃO</strong>
+        <span>Sistema Laboratorial • Laudos</span>
+      </div>
     </div>
 
-    <div>
-      <label>Data da Coleta</label>
-      <input id="data_coleta" type="text" placeholder="DD/MM/AAAA" maxlength="10"/>
+    <div class="header-right">
+      <div class="badge">Modo Profissional</div>
+      <div class="badge">100vh • Zero Scroll</div>
     </div>
-    <div>
-      <label>Data de Nascimento</label>
-      <input id="data_nascimento" type="text" placeholder="DD/MM/AAAA" maxlength="10"/>
+  </header>
+
+  <main>
+
+    <!-- Painel principal -->
+    <section class="panel">
+      <div class="panel-head">
+        <h1>Digitação rápida</h1>
+        <div class="badge">Extração automática</div>
+      </div>
+
+      <div class="panel-body">
+
+        <div class="fast-input">
+          <!-- ✅ Label fixo (substitui placeholder de instrução) -->
+          <div class="label">
+            <span class="dot"></span>
+            Cole ou digite os dados no campo abaixo
+          </div>
+
+          <!-- ✅ Guia fixo permanente (sempre visível) -->
+          <div class="guide">
+            Ordem:
+            <code>Data da Coleta</code> |
+            <code>Data de Nascimento</code> |
+            <code>Cartão SUS</code> |
+            <code>Telefone</code> |
+            <code>Rua</code>
+          </div>
+
+          <textarea id="entrada_rapida" rows="11"></textarea>
+
+          <div class="actions" style="margin-top:10px;">
+            <button class="btn btn-green" onclick="extrairEAbrir()">
+              EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO
+            </button>
+          </div>
+
+          <div class="hint">
+            ✅ Última linha pode ser: <b>SNM</b> ou <b>EAM</b> (Responsável).<br>
+            ✅ O nome não quebra: o exame é detectado por padrão <b>000156/2026</b>.
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Lateral (informações úteis) -->
+    <aside class="side">
+
+      <section class="card">
+        <div class="card-head">
+          <h2>Status do sistema</h2>
+          <div class="badge">Online</div>
+        </div>
+        <div class="card-body">
+          Interface otimizada para digitação rápida e precisão técnica.
+
+          <div class="kpi">
+            <div class="kpi-box">
+              <b>Extração</b>
+              <span>Automática</span>
+            </div>
+            <div class="kpi-box">
+              <b>Fluxo</b>
+              <span>Direto</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="card-head">
+          <h2>Campos técnicos</h2>
+          <div class="badge">Ocultos</div>
+        </div>
+        <div class="card-body">
+          Os campos de destino continuam no código para envio ao laudo,
+          mas ficam invisíveis para manter a interface limpa.
+        </div>
+      </section>
+
+    </aside>
+
+    <!-- ✅ Campos de destino (ocultos) -->
+    <div class="tech-hidden">
+      <div class="grid">
+        <div>
+          <label>Paciente</label>
+          <input id="paciente" type="text"/>
+        </div>
+        <div>
+          <label>Nº Exame</label>
+          <input id="exame" type="text"/>
+        </div>
+
+        <div>
+          <label>Data da Coleta</label>
+          <input id="data_coleta" type="text" maxlength="10"/>
+        </div>
+        <div>
+          <label>Data de Nascimento</label>
+          <input id="data_nascimento" type="text" maxlength="10"/>
+        </div>
+
+        <div>
+          <label>Cartão SUS</label>
+          <input id="cartao_sus" type="text"/>
+        </div>
+        <div>
+          <label>Telefone</label>
+          <input id="telefone" type="text"/>
+        </div>
+
+        <div>
+          <label>Rua</label>
+          <input id="rua" type="text"/>
+        </div>
+        <div>
+          <label>Bairro</label>
+          <input id="bairro" type="text"/>
+        </div>
+
+        <div>
+          <label>Cidade</label>
+          <input id="cidade" type="text"/>
+        </div>
+        <div>
+          <label>CEP</label>
+          <input id="cep" type="text"/>
+        </div>
+
+        <div style="grid-column: span 2;">
+          <label>Responsável</label>
+          <select id="responsavel">
+            <option value="">Selecione...</option>
+            <option value="SHEINA N. MORAIS RAMALHO">SHEINA N. MORAIS RAMALHO</option>
+            <option value="EDVÂNIA APARECIDA MENDES DE AZEVÊDO">EDVÂNIA APARECIDA MENDES DE AZEVÊDO</option>
+          </select>
+        </div>
+
+        <div style="grid-column: span 2;">
+          <label>Observação (opcional)</label>
+          <input id="observacao" type="text"/>
+        </div>
+      </div>
     </div>
 
-    <div>
-      <label>Cartão SUS</label>
-      <input id="cartao_sus" type="text" placeholder="Somente números"/>
-    </div>
-    <div>
-      <label>Telefone</label>
-      <input id="telefone" type="text" placeholder="(83) 9 9999-9999"/>
-    </div>
-
-    <div>
-      <label>Rua</label>
-      <input id="rua" type="text" placeholder="RUA / AV"/>
-    </div>
-    <div>
-      <label>Bairro</label>
-      <input id="bairro" type="text" placeholder="BAIRRO"/>
-    </div>
-
-    <div>
-      <label>Cidade</label>
-      <input id="cidade" type="text" placeholder="CIDADE/UF"/>
-    </div>
-    <div>
-      <label>CEP</label>
-      <input id="cep" type="text" placeholder="00000-000"/>
-    </div>
-
-    <div style="grid-column: span 2;">
-      <label>Responsável</label>
-      <select id="responsavel">
-        <option value="">Selecione...</option>
-        <option value="SHEINA N. MORAIS RAMALHO">SHEINA N. MORAIS RAMALHO</option>
-        <option value="EDVÂNIA APARECIDA MENDES DE AZEVÊDO">EDVÂNIA APARECIDA MENDES DE AZEVÊDO</option>
-      </select>
-    </div>
-
-    <div style="grid-column: span 2;">
-      <label>Observação (opcional)</label>
-      <input id="observacao" type="text" placeholder="Se desejar, digite aqui..."/>
-    </div>
-  </div>
-
-  <div class="muted">
-    ✅ Após extrair, o laudo abre automaticamente com todos os dados enviados.
-  </div>
+  </main>
 </div>
 
 <script>
@@ -274,10 +662,7 @@ function abrirLaudo(){
     return: returnUrl
   });
 
-  // ✅ caminho do arquivo do laudo no GitHub
   const laudoPath = "laudo.html";
-
-  // ✅ abre na MESMA ABA para o retorno funcionar perfeito
   window.location.href = laudoPath + "?" + params.toString();
 }
 
